node.js creation

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Open EVents</title>
+    <title>Open Events</title>
+    <link rel="icon" type = "image/png" href="src/media/images/oe_logo.png" />
 </head>
 <body>
-
+    <header>
+        <h1>Open Events</h1>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
