head, footer, css

--- a/src/home.html
+++ b/src/home.html
@@ -2,9 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OpenEvents</title>
+    <link rel="icon" type = "image/png" href="./media/images/oe_logo.jpg"/>
+    <link rel="reset" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/style_mobile.css" />
+    <link rel="stylesheet" href="./css/style_desktop.css" />
+    <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
+    <header>
+        <section>
+            <h2>OpenEvents</h2>
+        </section>
+
+        <section>
+            <div>
+                <nav>
+                    <a href="/src/search.html">
+                        <img
+                            src="./media/images/icons/search_icon.png"
+                            alt="search icon"
+                            width="50px"
+                        />
+                    </a>
+                    <a href="/src/events.html">
+                        <img
+                            src="./media/images/icons/party_icon.png"
+                            alt="events icon"
+                            width="50px"
+                        />
+                    </a>
+                    <a href="/src/friends.html">
+                        <img
+                            src="./media/images/icons/friends_icon.png"
+                            alt="friends icon"
+                            width="50px"
+                        />
+                    </a>
+                    <a href="/src/profile.html">
+                        <img
+                            src="./media/images/icons/profile_icon.png"
+                            alt="profile icon"
+                            width="50px"
+                        />
+                    </a>
+                    <a href="/src/index.html">
+                        <img
+                            src="./media/images/icons/logout_icon.png"
+                            alt="log out icon"
+                            width="50px"
+                        />
+                    </a>
+                </nav>
+            </div>
+        </section>
+
+    </header>
+
+    <main>
+        <p>PRUEBA</p>
+    </main>
+
+    <footer>
+        <section>
+            <div>
+                <h4>OpenEvents</h4>
+                <nav>
+                    <a href="" >Terms of use</a>
+                    <a href="" >Privacy Policy</a>
+                </nav>
+            </div>
+            <div>
+                <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+            </div>
+        </section>
+    </footer>
 
 </body>
+
 </html>
