--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Open Events</title>
-    <link rel="icon" type = "image/png" href="src/media/images/oe_logo.png" />
+    <title>OpenEvents</title>
+    <link rel="icon" type = "image/png" href="./media/images/oe_logo.jpg"/>
+    <link rel="reset" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/style_mobile.css" />
+    <link rel="stylesheet" href="./css/style_desktop.css" />
+    <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
     <main>
