header finished nearly

--- a/src/home.html
+++ b/src/home.html
@@ -11,52 +11,47 @@
 </head>
 <body>
     <header>
-        <section>
-            <h2>OpenEvents</h2>
+        <section class="flex_header margins">
+            <article>
+                <h1>OpenEvents</h1>
+            </article>
+            <article>
+                <div>
+                    <nav>
+                        <a href="/src/search.html">
+                            <img
+                                src="./media/images/icons/search_icon.png"
+                                alt="search icon"
+                            />
+                        </a>
+                        <a href="/src/events.html">
+                            <img
+                                src="./media/images/icons/party_icon.png"
+                                alt="events icon"
+                            />
+                        </a>
+                        <a href="/src/friends.html">
+                            <img
+                                src="./media/images/icons/friends_icon.png"
+                                alt="friends icon"
+                            />
+                        </a>
+                        <a href="/src/profile.html">
+                            <img
+                                src="./media/images/icons/profile_icon.png"
+                                alt="profile icon"
+                            />
+                        </a>
+                        <a href="/src/index.html">
+                            <img
+                                src="./media/images/icons/logout_icon.png"
+                                alt="log out icon"
+                            />
+                        </a>
+                    </nav>
+                </div>
+            </article>
         </section>
-
-        <section>
-            <div>
-                <nav>
-                    <a href="/src/search.html">
-                        <img
-                            src="./media/images/icons/search_icon.png"
-                            alt="search icon"
-                            width="50px"
-                        />
-                    </a>
-                    <a href="/src/events.html">
-                        <img
-                            src="./media/images/icons/party_icon.png"
-                            alt="events icon"
-                            width="50px"
-                        />
-                    </a>
-                    <a href="/src/friends.html">
-                        <img
-                            src="./media/images/icons/friends_icon.png"
-                            alt="friends icon"
-                            width="50px"
-                        />
-                    </a>
-                    <a href="/src/profile.html">
-                        <img
-                            src="./media/images/icons/profile_icon.png"
-                            alt="profile icon"
-                            width="50px"
-                        />
-                    </a>
-                    <a href="/src/index.html">
-                        <img
-                            src="./media/images/icons/logout_icon.png"
-                            alt="log out icon"
-                            width="50px"
-                        />
-                    </a>
-                </nav>
-            </div>
-        </section>
-
     </header>
 
     <main>
