litel title changes and index.html

--- a/src/home.html
+++ b/src/home.html
@@ -13,18 +13,18 @@
     <header>
         <section class="flex_header margins">
             <article>
-                <h1>OpenEvents</h1>
+                <a href="./home.html"><h1 id="title">OpenEvents</h1></a>
             </article>
             <article>
                 <div>
                     <nav>
-                        <a href="/src/search.html">
+                        <a href="./search.html">
                             <img
                                 src="./media/images/icons/search_icon.png"
                                 alt="search icon"
                             />
                         </a>
-                        <a href="/src/events.html">
+                        <a href="./events.html">
                             <img
                                 src="./media/images/icons/party_icon.png"
                                 alt="events icon"
@@ -36,13 +36,13 @@
                                 alt="friends icon"
                             />
                         </a>
-                        <a href="/src/profile.html">
+                        <a href="./profile.html">
                             <img
                                 src="./media/images/icons/profile_icon.png"
                                 alt="profile icon"
                             />
                         </a>
-                        <a href="/src/index.html">
+                        <a href="./index.html">
                             <img
                                 src="./media/images/icons/logout_icon.png"
                                 alt="log out icon"
@@ -55,7 +55,6 @@
     </header>
 
     <main>
-        <p>PRUEBA</p>
     </main>
 
     <footer>
