--- a/src/home.html
+++ b/src/home.html
@@ -57,19 +57,21 @@
     <main>
     </main>
 
-    <footer>
-        <section>
+    <footer class="flex_footer">
+        <section class="inlineNav">
             <div>
                 <h4>OpenEvents</h4>
-                <nav>
-                    <a href="" >Terms of use</a>
-                    <a href="" >Privacy Policy</a>
-                </nav>
             </div>
             <div>
-                <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+                <nav>
+                    <div><a href="./terms.html"><h5>Terms of use</h5></a></div>
+                    <div><a href="./privacy.html"><h5>Privacy Policy</h5></a></div>
+                </nav>
             </div>
         </section>
+        <div>
+            <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+        </div>
     </footer>
 
 </body>
