--- a/src/home.html
+++ b/src/home.html
@@ -13,7 +13,7 @@
     <header>
         <section class="flex_header margins">
             <article>
-                <a href="./home.html"><h1 id="title">OpenEvents</h1></a>
+                <a href="./home.html"><h1 id="mainTitle">OpenEvents</h1></a>
             </article>
             <article>
                 <div>
