--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,18 @@
     <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
-    <main class="flex_index">
+    <main>
         <section class="backgroundImg">
             <article class="flex_login">
-                <h1>OpenEvents</h1>
+                <h1 id="mainTitle">OpenEvents</h1>
             </article>
             <article class="flex_login">
                 <form>
-                    <input class="input_box" type="text" id="mail" name="mail"
+                    <input class="input_box" type="email" id="mail" name="mail"
                            size="10" placeholder="e-mail" pattern="/^[a-zA-Z0-9.!#$%&amp;'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required />
                     <input class="input_box" type="password" id="password" name="password" required
                            size="10" placeholder="password" />
-                    <button class="buttons" type="button" onclick="window.location.href='./home.html'">Log in</button>
+                    <button class="buttonLogIn" type="button" onclick="window.location.href='./home.html'">Log in</button>
                 </form>
             </article>
         </section>
@@ -39,7 +39,7 @@
                            minlength="11" maxlength="150" size="10" placeholder="e-mail" pattern="/^[a-zA-Z0-9.!#$%&amp;'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required />
                     <input class="input_box" type="password" id="newPassword" name="password" required
                            minlength="1" maxlength="15" size="10" placeholder="password" />
-                    <button class="buttons" type="button" onclick="window.location.href='./home.html'">Sign up</button>
+                    <button class="buttonSignUp" type="button" onclick="window.location.href='./home.html'">Sign up</button>
                 </form>
             </article>
         </section>
