--- a/src/home.html
+++ b/src/home.html
@@ -55,6 +55,10 @@
     </header>
 
     <main>
+        <div>
+            <img src="./media/images/friends_bkg.jpg" alt="Friends Background">
+        </div>
+        <div></div>
     </main>
 
     <footer class="flex_footer">
@@ -73,7 +77,5 @@
             <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
         </div>
     </footer>
-
 </body>
-
 </html>
