--- a/src/home.html
+++ b/src/home.html
@@ -55,10 +55,21 @@
     </header>
 
     <main>
-        <div>
-            <img src="./media/images/friends_bkg.jpg" alt="Friends Background">
-        </div>
-        <div></div>
+        <section class="flex_home">
+            <article>
+                <div>
+                    <h3 class="home_title">What are you up to?</h3>
+                </div>
+            </article>
+            <article class="flex_bkg_home">
+                <div class="bkgFriends">
+                    <a href="./friends.html"><h1 class="friendsHome">MEET FRIENDS</h1></a>
+                </div>
+                <div class="bkgEvents">
+                    <a href="./events.html"><h1 class="friendsHome">ENJOY EVENTS</h1></a>
+                </div>
+            </article>
+        </section>
     </main>
 
     <footer class="flex_footer">
