--- a/src/profile.html
+++ b/src/profile.html
@@ -10,6 +10,78 @@
     <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
+    <header>
+        <section class="flex_header margins">
+            <article>
+                <a href="./home.html"><h1 id="mainTitle">OpenEvents</h1></a>
+            </article>
+            <article>
+                <div>
+                    <nav>
+                        <a href="./search.html">
+                            <img
+                                src="./media/images/icons/search_icon.png"
+                                alt="search icon"
+                            />
+                        </a>
+                        <a href="./events.html">
+                            <img
+                                src="./media/images/icons/party_icon.png"
+                                alt="events icon"
+                            />
+                        </a>
+                        <a href="/src/friends.html">
+                            <img
+                                src="./media/images/icons/friends_icon.png"
+                                alt="friends icon"
+                            />
+                        </a>
+                        <a href="./profile.html">
+                            <img
+                                src="./media/images/icons/profile_icon.png"
+                                alt="profile icon"
+                            />
+                        </a>
+                        <a href="./index.html">
+                            <img
+                                src="./media/images/icons/logout_icon.png"
+                                alt="log out icon"
+                            />
+                        </a>
+                    </nav>
+                </div>
+            </article>
+        </section>
+    </header>
+    <main>
 
+        <section>
+            <div>
+                <h3 class="home_title">Personal Information</h3>
+            </div>
+            <article>
+                <div>
+                    <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
+                </div>
+            </article>
+        </section>
+
+    </main>
+    <footer class="flex_footer">
+        <section class="inlineNav">
+            <div>
+                <h4>OpenEvents</h4>
+            </div>
+            <div>
+                <nav>
+                    <div><a href="./terms.html"><h5>Terms of use</h5></a></div>
+                    <div><a href="./privacy.html"><h5>Privacy Policy</h5></a></div>
+                </nav>
+            </div>
+        </section>
+        <div>
+            <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+        </div>
+    </footer>
 </body>
 </html>
