--- a/src/profile.html
+++ b/src/profile.html
@@ -63,6 +63,9 @@
                 <div>
                     <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
                 </div>
+                <div>
+                    <a href="./index.html"><h3 class="logout_profile">LOG OUT</h3></a>
+                </div>
             </article>
         </section>
 
