--- a/src/search.html
+++ b/src/search.html
@@ -65,6 +65,9 @@
             <h4>What are you looking for?</h4>
             <h4>Find out events people or whatever</h4>
         </article>
+        <article>
+            <img src="./media/images/connections_bckg.jpg", alt="">
+        </article>
     </section>
 </main>
 
