search web continuation

--- a/src/search.html
+++ b/src/search.html
@@ -62,11 +62,11 @@
             </form>
         </article>
         <article>
-            <h4>What are you looking for?</h4>
-            <h4>Find out events people or whatever</h4>
+            <h5>What are you looking for?</h5>
+            <h5>Find out events people or whatever</h5>
         </article>
         <article>
-            <img src="./media/images/connections_bckg.jpg", alt="">
+            <img class="searchImage" src="./media/images/search_img.jpg" alt="connections">
         </article>
     </section>
 </main>
