--- a/src/events.html
+++ b/src/events.html
@@ -10,6 +10,50 @@
     <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
+<header>
+    <section class="flex_header margins">
+        <article>
+            <a href="./home.html"><h1 id="mainTitle">OpenEvents</h1></a>
+        </article>
+        <article>
+            <div>
+                <nav>
+                    <a href="./search.html">
+                        <img
+                                src="./media/images/icons/search_icon.png"
+                                alt="search icon"
+                        />
+                    </a>
+                    <a href="./events.html">
+                        <img
+                                src="./media/images/icons/party_icon.png"
+                                alt="events icon"
+                        />
+                    </a>
+                    <a href="/src/friends.html">
+                        <img
+                                src="./media/images/icons/friends_icon.png"
+                                alt="friends icon"
+                        />
+                    </a>
+                    <a href="./profile.html">
+                        <img
+                                src="./media/images/icons/profile_icon.png"
+                                alt="profile icon"
+                        />
+                    </a>
+                    <a href="./index.html">
+                        <img
+                                src="./media/images/icons/logout_icon.png"
+                                alt="log out icon"
+                        />
+                    </a>
+                </nav>
+            </div>
+        </article>
+    </section>
+</header>
+
 
 </body>
 </html>
