--- a/src/home.html
+++ b/src/home.html
@@ -75,7 +75,7 @@
     <footer class="flex_footer">
         <section class="inlineNav">
             <div>
-                <h4>OpenEvents</h4>
+                <h4 class="white">OpenEvents</h4>
             </div>
             <div>
                 <nav>
@@ -85,7 +85,7 @@
             </div>
         </section>
         <div>
-            <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+            <h5 class="white">© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
         </div>
     </footer>
 </body>
