--- a/src/search.html
+++ b/src/search.html
@@ -61,12 +61,9 @@
                 <input class="searchBox" type="text" name="search" placeholder="Search friends, events or whatever...">
             </form>
         </article>
-        <article>
-            <h5>What are you looking for?</h5>
-            <h5>Find out events people or whatever</h5>
-        </article>
-        <article>
-            <img class="searchImage" src="./media/images/search_img.jpg" alt="connections">
+        <article class="searchText">
+            <h4>What are you looking for?</h4>
+            <h4>Find out events people or whatever</h4>
         </article>
     </section>
 </main>
@@ -74,7 +71,7 @@
 <footer class="flex_footer">
     <section class="inlineNav">
         <div>
-            <h4>OpenEvents</h4>
+            <h4 class="white">OpenEvents</h4>
         </div>
         <div>
             <nav>
@@ -84,7 +81,7 @@
         </div>
     </section>
     <div>
-        <h5>© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+        <h5 class="white">© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
     </div>
 </footer>
 </body>
