--- a/src/profile.html
+++ b/src/profile.html
@@ -54,16 +54,42 @@
         </section>
     </header>
     <main>
-        <section>
+        <section class="flex_profile">
             <div>
                 <h3 class="home_title">Personal Information</h3>
             </div>
             <article>
                 <div>
-                    <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
+                    <div class="div_inline">
+                        <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
+                    </div>
+                    <div class="div_inline">
+                        <a href="./index.html"><h3 class="logout_profile">LOG OUT</h3></a>
+                    </div>
+                </div>
+                <div class="flex_profile_info">
+                    <div class="profile_info_theme">
+                        <h3>Name</h3>
+                        <h3>Surnames</h3>
+                        <h3>Email</h3>
+                        <h3>Password</h3>
+                    </div>
+                    <div class="profile_info_theme_input">
+                        <h3>Tom</h3>
+                        <h3>Stanley Holland</h3>
+                        <h3>tom@openevents.com</h3>
+                        <h3>asdfgh</h3>
+                    </div>
                 </div>
                 <div>
-                    <a href="./index.html"><h3 class="logout_profile">LOG OUT</h3></a>
+                    <div>
+                        <div><img src="./media/images/icons/edit_icon.png" alt="Edit Icon"></div>
+                        <a href="./profile.html"><h4 class="edit_profile_link">edit your information</h4></a>
+
+                    </div>
+                    <div>
+                        <a href="./profile.html"><h3 class="done_profile">DONE</h3></a>
+                    </div>
                 </div>
             </article>
         </section>
