--- a/src/profile.html
+++ b/src/profile.html
@@ -7,6 +7,7 @@
     <link rel="reset" href="./css/reset.css"/>
     <link rel="stylesheet" href="./css/style_mobile.css" />
     <link rel="stylesheet" href="./css/style_desktop.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
@@ -81,15 +82,36 @@
                         <h3>asdfgh</h3>
                     </div>
                 </div>
-                <div>
+                <div class="flex_edit_buttons">
                     <div>
-                        <div><img src="./media/images/icons/edit_icon.png" alt="Edit Icon"></div>
-                        <a href="./profile.html"><h4 class="edit_profile_link">edit your information</h4></a>
-
+                        <div class="div_inline"><a href="./profile.html"><img class="edit_profile_img" src="./media/images/icons/edit_icon.png" alt="Edit Icon"></a></div>
+                        <div class="div_inline"><a href="./profile.html"><h4 class="edit_profile_link">edit your information</h4></a></div>
                     </div>
                     <div>
                         <a href="./profile.html"><h3 class="done_profile">DONE</h3></a>
                     </div>
+                </div>
+            </article>
+            <div>
+                <h3 class="home_title">Your Statistics</h3>
+            </div>
+            <article>
+                <h4>Score</h4>
+                <div>
+                    <div class="star-container">
+                        <div class="star"></div>
+                        <div class="star"></div>
+                        <div class="star"></div>
+                        <div class="star"></div>
+                        <div class="star"></div>
+                    </div>
+                </div>
+                <div>
+                    <h3>users % with less comments </h3>
+                    <h2 class="users_profile">30</h2>
+                </div>
+                <div>
+                    <a href="./index.html"><h3 class="delete_profile">DELETE ACCOUNT</h3></a>
                 </div>
             </article>
         </section>
