commit events and design

--- a/src/events.html
+++ b/src/events.html
@@ -10,50 +10,100 @@
     <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
-<header>
-    <section class="flex_header margins">
-        <article>
-            <a href="./home.html"><h1 id="mainTitle">OpenEvents</h1></a>
-        </article>
-        <article>
-            <div>
-                <nav>
-                    <a href="./search.html">
-                        <img
+    <header>
+        <section class="flex_header margins">
+            <article>
+                <a href="./home.html"><h1 id="mainTitle">OpenEvents</h1></a>
+            </article>
+            <article>
+                <div>
+                    <nav>
+                        <a href="./search.html">
+                            <img
                                 src="./media/images/icons/search_icon.png"
                                 alt="search icon"
-                        />
-                    </a>
-                    <a href="./events.html">
-                        <img
+                            />
+                        </a>
+                        <a href="./events.html">
+                            <img
                                 src="./media/images/icons/party_icon.png"
                                 alt="events icon"
-                        />
-                    </a>
-                    <a href="/src/friends.html">
-                        <img
+                            />
+                        </a>
+                        <a href="/src/friends.html">
+                            <img
                                 src="./media/images/icons/friends_icon.png"
                                 alt="friends icon"
-                        />
-                    </a>
-                    <a href="./profile.html">
-                        <img
+                            />
+                        </a>
+                        <a href="./profile.html">
+                            <img
                                 src="./media/images/icons/profile_icon.png"
                                 alt="profile icon"
-                        />
-                    </a>
-                    <a href="./index.html">
-                        <img
+                            />
+                        </a>
+                        <a href="./index.html">
+                            <img
                                 src="./media/images/icons/logout_icon.png"
                                 alt="log out icon"
-                        />
-                    </a>
+                            />
+                        </a>
+                    </nav>
+                </div>
+            </article>
+        </section>
+    </header>
+
+    <main>
+        <h3>Discover Events</h3>
+        <section class="events_general_flex">
+            <article class="first_buttons">
+                <a href="./terms.html"><h5>List MY EVENTS</h5></a>
+                <a href="./eventology.html"><h5>Visit your EVENTOLOGY</h5></a>
+            </article>
+            <article>
+                <a href="./terms.html"><h5>TRENDING</h5></a>
+                <a href="./terms.html"><h5>MUSIC</h5></a>
+                <a href="./terms.html"><h5>EDUCATION</h5></a>
+            </article>
+            <article>
+                <a href="./events.html"><h5>show more categories</h5></a>
+                <a href="./profile.html">
+                    <img
+                        src="./media/images/icons/settings_icon.png"
+                        alt="settings icon"
+                        width="50"
+                    />
+                </a>
+            </article>
+
+            <article>
+                <div>
+                    <h4>Are you an Eventer? </h4>
+                </div>
+
+            </article>
+
+        </section>
+
+
+    </main>
+
+    <footer class="flex_footer">
+        <section class="inlineNav">
+            <div>
+                <h4 class="white">OpenEvents</h4>
+            </div>
+            <div>
+                <nav>
+                    <div><a href="./terms.html"><h5>Terms of use</h5></a></div>
+                    <div><a href="./privacy.html"><h5>Privacy Policy</h5></a></div>
                 </nav>
             </div>
-        </article>
-    </section>
-</header>
-
-
+        </section>
+        <div>
+            <h5 class="white">© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+        </div>
+    </footer>
 </body>
 </html>
