privacy.html, terms.html and profile.html on web

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -53,21 +53,13 @@
         </article>
     </section>
 </header>
-
 <main>
-    <section class="margins">
-        <article>
-            <form>
-                <input class="searchBox" type="text" name="search" placeholder="Search friends, events or whatever...">
-            </form>
-        </article>
-        <article class="searchText">
-            <h4>What are you looking for?</h4>
-            <h4>Find out events people or whatever</h4>
-        </article>
-    </section>
+    <article class="terms_flex">
+        <div><h3 class="terms_title">Privacy Policy</h3></div>
+        <p class="terms_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae mollis nisl. Phasellus viverra magna sit amet urna vehicula, id euismod est facilisis. Cras eu felis sit amet lacus mollis rhoncus sed ut urna. Praesent eu eleifend massa, eget finibus sapien. Cras ac porttitor nunc. Aenean eleifend congue sollicitudin. Ut pulvinar porta lectus ac fringilla. Nam nec felis id metus porta gravida sed quis augue.</p>
+        <p class="terms_description">Pellentesque sagittis vel ligula eget dictum. Cras justo sapien, varius sed euismod eu, condimentum a diam. Donec elit ante, molestie non massa at, pretium egestas dui. Nulla accumsan accumsan augue ac elementum. Quisque gravida pharetra turpis sed fringilla. Mauris tempus scelerisque porta. Aenean hendrerit, leo in facilisis commodo, justo arcu placerat quam, eget tristique lorem justo eget urna. Vivamus in arcu semper, interdum lorem id, blandit diam.</p>
+    </article>
 </main>
-
 <footer class="flex_footer">
     <section class="inlineNav">
         <div>
