--- a/src/profile.html
+++ b/src/profile.html
@@ -56,10 +56,10 @@
     </header>
     <main>
         <section class="flex_profile">
-            <div>
-                <h3 class="home_title">Personal Information</h3>
-            </div>
             <article>
+                <div>
+                    <h3 class="home_title">Personal Information</h3>
+                </div>
                 <div>
                     <div class="div_inline">
                         <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
@@ -92,11 +92,11 @@
                     </div>
                 </div>
             </article>
-            <div>
-                <h3 class="home_title">Your Statistics</h3>
-            </div>
             <article>
-                <h4>Score</h4>
+                <div>
+                    <h3 class="home_title">Your Statistics</h3>
+                </div>
+                <h3 class="score_profile">Score</h3>
                 <div>
                     <div class="star-container">
                         <div class="star"></div>
@@ -106,10 +106,11 @@
                         <div class="star"></div>
                     </div>
                 </div>
-                <div>
+                <div class="comments_profile">
                     <h3>users % with less comments </h3>
-                    <h2 class="users_profile">30</h2>
+                    <h3 class="users_profile">30</h3>
                 </div>
+                <div class="divisor_color"></div>
                 <div>
                     <a href="./index.html"><h3 class="delete_profile">DELETE ACCOUNT</h3></a>
                 </div>
@@ -123,8 +124,8 @@
             </div>
             <div>
                 <nav>
-                    <div><a href="./terms.html"><h5>Terms of use</h5></a></div>
-                    <div><a href="./privacy.html"><h5>Privacy Policy</h5></a></div>
+                    <div><a href="./terms.html"><h5 class="white">Terms of use</h5></a></div>
+                    <div><a href="./privacy.html"><h5 class="white">Privacy Policy</h5></a></div>
                 </nav>
             </div>
         </section>
