--- a/src/terms.html
+++ b/src/terms.html
@@ -53,25 +53,13 @@
             </article>
         </section>
     </header>
-
     <main>
-        <section class="flex_home">
-            <article>
-                <div>
-                    <h3 class="home_title">What are you up to?</h3>
-                </div>
-            </article>
-            <article class="flex_bkg_home">
-                <div class="bkgFriends">
-                    <a href="./friends.html"><h1 class="friendsHome">MEET FRIENDS</h1></a>
-                </div>
-                <div class="bkgEvents">
-                    <a href="./events.html"><h1 class="friendsHome">ENJOY EVENTS</h1></a>
-                </div>
-            </article>
-        </section>
+        <article class="terms_flex">
+            <div><h3 class="terms_title">Terms of use</h3></div>
+            <p class="terms_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae mollis nisl. Phasellus viverra magna sit amet urna vehicula, id euismod est facilisis. Cras eu felis sit amet lacus mollis rhoncus sed ut urna. Praesent eu eleifend massa, eget finibus sapien. Cras ac porttitor nunc. Aenean eleifend congue sollicitudin. Ut pulvinar porta lectus ac fringilla. Nam nec felis id metus porta gravida sed quis augue.</p>
+            <p class="terms_description">Pellentesque sagittis vel ligula eget dictum. Cras justo sapien, varius sed euismod eu, condimentum a diam. Donec elit ante, molestie non massa at, pretium egestas dui. Nulla accumsan accumsan augue ac elementum. Quisque gravida pharetra turpis sed fringilla. Mauris tempus scelerisque porta. Aenean hendrerit, leo in facilisis commodo, justo arcu placerat quam, eget tristique lorem justo eget urna. Vivamus in arcu semper, interdum lorem id, blandit diam.</p>
+        </article>
     </main>
-
     <footer class="flex_footer">
         <section class="inlineNav">
             <div>
