delete.html done

--- a/src/delete.html
+++ b/src/delete.html
@@ -7,7 +7,6 @@
     <link rel="reset" href="./css/reset.css"/>
     <link rel="stylesheet" href="./css/style_mobile.css" />
     <link rel="stylesheet" href="./css/style_desktop.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
@@ -54,66 +53,25 @@
             </article>
         </section>
     </header>
-    <main>
-        <section class="flex_profile">
+    <main class="grey_background">
+        <section class="delete_questions">
             <article>
-                <div>
-                    <h3 class="home_title">Personal Information</h3>
-                </div>
-                <div>
-                    <div class="div_inline">
-                        <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
-                    </div>
-                    <div class="div_inline">
-                        <a href="./index.html"><h3 class="logout_profile">LOG OUT</h3></a>
-                    </div>
-                </div>
-                <div class="flex_profile_info">
-                    <div class="profile_info_theme">
-                        <h3>Name</h3>
-                        <h3>Surnames</h3>
-                        <h3>Email</h3>
-                        <h3>Password</h3>
-                    </div>
-                    <div class="profile_info_theme_input">
-                        <h3>Tom</h3>
-                        <h3>Stanley Holland</h3>
-                        <h3>tom@openevents.com</h3>
-                        <h3>asdfgh</h3>
-                    </div>
-                </div>
-                <div class="flex_edit_buttons">
-                    <div>
-                        <div class="div_inline"><a href="./profile.html"><img class="edit_profile_img" src="./media/images/icons/edit_icon.png" alt="Edit Icon"></a></div>
-                        <div class="div_inline"><a href="./profile.html"><h4 class="edit_profile_link">edit your information</h4></a></div>
-                    </div>
-                    <div>
-                        <a href="./profile.html"><h3 class="done_profile">DONE</h3></a>
-                    </div>
-                </div>
+                <h2>Tom Holland</h2>
             </article>
             <article>
-                <div>
-                    <h3 class="home_title">Your Statistics</h3>
-                </div>
-                <h3 class="score_profile">Score</h3>
-                <div>
-                    <div class="star-container">
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                    </div>
-                </div>
-                <div class="comments_profile">
-                    <h3>users % with less comments </h3>
-                    <h3 class="users_profile">30</h3>
-                </div>
-                <div class="divisor_color"></div>
-                <div>
-                    <a href="./delete.html"><h3 class="delete_profile">DELETE ACCOUNT</h3></a>
-                </div>
+                <p>tom@openevents.com</p>
+            </article>
+            <article>
+                <p>Are you sure you want to delete your account?</p>
+            </article>
+            <article>
+                <p>All your personal information will be deleted </p>
+            </article>
+            <article>
+                <a href="./index.html"><h3 class="delete_profile_anyway">DELETE ANYWAY</h3></a>
+            </article>
+            <article>
+                <a href="./profile.html"><h3 class="delete_cancel">CANCEL</h3></a>
             </article>
         </section>
     </main>
